--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "index.js",
   "scripts": {
     "build": "rimraf dist && tsc && rollup -c rollup.config.js",
-    "start": "concurrently --kill-others --names tsc,es-dev-server \"npm run tsc:watch\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch\"",
+    "start": "concurrently --kill-others --names tsc,rollup,es-dev-server \"npm run tsc:watch\" \"rollup -c rollup.config.js -w\" \"es-dev-server --app-index dist/index.html --node-resolve --open --watch\"",
     "tsc:watch": "tsc --watch",
     "lint:eslint": "eslint --ext .ts,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .ts,.html . --fix --ignore-path .gitignore",
@@ -22,8 +22,10 @@
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
+    "@google/clasp": "^2.3.0",
     "@open-wc/building-rollup": "^1.9.0",
     "@open-wc/eslint-config": "^2.0.0",
+    "@types/google-apps-script": "^1.0.16",
     "@types/node": "13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
@@ -36,6 +38,7 @@
     "prettier": "^2.0.4",
     "rifraf": "^2.0.3",
     "rollup": "^2.28.1",
+    "rollup-plugin-execute": "^1.1.1",
     "tslib": "^1.11.0",
     "typescript": "~3.9.0"
   },
