--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "index.js",
   "scripts": {
     "build": "rimraf dist && tsc && rollup -c rollup.config.js",
-    "start": "concurrently --kill-others --names tsc,rollup,es-dev-server \"npm run tsc:watch\" \"rollup -c rollup.config.js -w\" \"es-dev-server --app-index dist/index.html --node-resolve --open --watch\"",
+    "start": "concurrently --kill-others --names tsc,rollup,es-dev-server \"npm run tsc:watch\" \"rollup -c rollup.config.js -w\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch\"",
     "tsc:watch": "tsc --watch",
     "lint:eslint": "eslint --ext .ts,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .ts,.html . --fix --ignore-path .gitignore",
