--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "format": "npm run format:eslint && npm run format:prettier"
   },
   "dependencies": {
+    "@material/mwc-button": "^0.19.1",
+    "@material/mwc-fab": "^0.19.1",
+    "@material/mwc-icon": "^0.19.1",
+    "@material/mwc-icon-button": "^0.19.1",
+    "@material/mwc-list": "^0.19.1",
+    "@material/mwc-select": "^0.19.1",
+    "@material/mwc-top-app-bar-fixed": "^0.19.1",
+    "@webcomponents/webcomponentsjs": "^2.4.4",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2"
   },
