--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@material/mwc-button": "^0.19.1",
+    "@material/mwc-dialog": "^0.19.1",
     "@material/mwc-fab": "^0.19.1",
     "@material/mwc-icon": "^0.19.1",
     "@material/mwc-icon-button": "^0.19.1",
@@ -26,6 +27,7 @@
     "@material/mwc-select": "^0.19.1",
     "@material/mwc-top-app-bar-fixed": "^0.19.1",
     "@webcomponents/webcomponentsjs": "^2.4.4",
+    "app-datepicker": "^4.3.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2"
   },
