--- a/appsscript.json
+++ b/appsscript.json
@@ -2,8 +2,8 @@
   "timeZone": "Europe/Amsterdam",
   "dependencies": {},
   "webapp": {
-    "access": "ANYONE",
-    "executeAs": "USER_ACCESSING"
+    "executeAs": "USER_DEPLOYING",
+    "access": "MYSELF"
   },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
