--- a/package.json
+++ b/package.json
@@ -28,30 +28,30 @@
     "@material/mwc-top-app-bar-fixed": "^0.19.1",
     "@vaadin/vaadin-date-picker": "^4.4.1",
     "@vaadin/vaadin-time-picker": "^2.4.0",
-    "@webcomponents/webcomponentsjs": "^2.4.4",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.1.2"
+    "@webcomponents/webcomponentsjs": "^2.6.0",
+    "lit-element": "^2.5.1",
+    "lit-html": "^1.4.1"
   },
   "devDependencies": {
-    "@google/clasp": "^2.3.0",
-    "@open-wc/building-rollup": "^1.9.0",
+    "@google/clasp": "^2.3.2",
+    "@open-wc/building-rollup": "^1.10.0",
     "@open-wc/eslint-config": "^2.0.0",
-    "@types/google-apps-script": "^1.0.16",
+    "@types/google-apps-script": "^1.0.37",
     "@types/node": "13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "concurrently": "^5.1.0",
-    "es-dev-server": "^1.23.0",
+    "es-dev-server": "^1.60.2",
     "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.15.0",
     "husky": "^1.0.0",
-    "lint-staged": "^10.0.0",
-    "prettier": "^2.0.4",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.4.0",
     "rifraf": "^2.0.3",
-    "rollup": "^2.28.1",
+    "rollup": "^2.56.3",
     "rollup-plugin-execute": "^1.1.1",
-    "tslib": "^1.11.0",
-    "typescript": "~3.9.0"
+    "tslib": "^1.14.1",
+    "typescript": "^3.9.10"
   },
   "eslintConfig": {
     "extends": [
